fix: fixed team overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2240,6 +2240,7 @@ h3 {
 
 .team {
   margin: 100px 0 90px;
+  overflow: hidden;
 }
 @media (max-width: 768px) {
   .team {
